Agrega fragments y menu About

--- a/app/src/main/res/layout/navview_header.xml
+++ b/app/src/main/res/layout/navview_header.xml
@@ -9,5 +9,15 @@
         android:src="@mipmap/bridge_header"
         android:scaleType="fitCenter" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
+        android:textStyle="bold"
+        android:textColor="@color/colorTextPrimary"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp" />
 
 </FrameLayout>
