--- a/app/src/main/res/menu/menu_navview.xml
+++ b/app/src/main/res/menu/menu_navview.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group
         android:id="@+id/grp1"
-        android:checkableBehavior="none">
+        android:checkableBehavior="single">
         <item
             android:id="@+id/menu_principal"
             android:icon="@drawable/ic_action_ppal"
@@ -19,7 +19,7 @@
 
     <group
         android:id="@+id/grp2"
-        android:checkableBehavior="none">
+        android:checkableBehavior="single">
         <item
             android:id="@+id/menu_info"
             android:icon="@drawable/ic_action_info"
