--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,10 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.mapx.kosten.infocomarca.fragments.MainFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <!-- Recycle View Cards -->
+    <include layout="@layout/recyview_item" />
 
 </FrameLayout>
