--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -29,6 +29,7 @@
                 android:layout_gravity="fill"
                 android:gravity="center"
                 android:scaleType="fitCenter"
+                android:layout_margin="5sp"
                 android:layout_columnWeight=".5"
                 android:src="@drawable/ic_action_news" />
 
