--- a/app/src/main/res/layout/activity_newspaper.xml
+++ b/app/src/main/res/layout/activity_newspaper.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:orientation="vertical">
+    tools:context="com.mapx.kosten.infocomarca.activities.NewspaperActivity">
 
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:clickable="true"
+        tools:context=".activities.NewspaperActivity"
+        tools:showIn="@layout/activity_newspaper">
 
         <!-- Toolbar Layout -->
         <include
@@ -22,9 +30,24 @@
             app:layout_constraintTop_toTopOf="parent">
         </include>
 
+        <!-- Recycle View Cards -->
+        <include layout="@layout/recyview_item" />
 
     </LinearLayout>
 
-</LinearLayout>
+    <!-- Navigation View Layout -->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navviewLayout_main"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/navview_header"
+        app:itemIconTint="@color/colorTextPrimary"
+        app:itemTextColor="@color/colorTextPrimary"
+        app:menu="@menu/menu_navview" />
+
+</android.support.v4.widget.DrawerLayout>
+
 
 
