--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,8 +1,21 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mapx.kosten.infocomarca.fragments.AboutFragment">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
+
+    <!-- Toolbar Layout -->
+    <include
+        layout="@layout/toolbar_main"
+        android:id="@+id/toolbarLayout_main"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </include>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -99,4 +112,7 @@
 
         </LinearLayout>
     </ScrollView>
-</FrameLayout>
+
+
+
+ </LinearLayout>
